cargo-features = ["edition"]

[package]
name = "spnego-proxy"
version = "0.1.0"
authors = ["Tomasz Kontusz <tomasz.kontusz@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "0.1"
futures = "0.1"
hyper = "0.12"
hyper-tls = "0.3"
native-tls = "*"
rand = "0.5"
gssapi-sys = "0.2"
base64 = "0.9"
http = "0.1.7"
structopt = "0.2"
log = "0.4"
stderrlog = "0.4"

[[bin]]
name = "spnego-proxy"
path = "src/main.rs"
